Partner application and reporting forms

--- a/globalsky/templates/base.html
+++ b/globalsky/templates/base.html
@@ -60,7 +60,7 @@
         <a class="navbar-item" href="">
           Reports
         </a>
-        <a class="navbar-item" href="">
+        <a class="navbar-item" href="{% url 'apply' %}">
           Apply
         </a>
 
