--- a/globalsky/templates/login.html
+++ b/globalsky/templates/login.html
@@ -14,18 +14,18 @@
     <script src="{% static "js/auth.js" %}"  type="text/javascript" ></script>
     <script>
 
-    $(document).ready(function(){
-    	$('#login-btn').on('click',function(){
-    	  login($('#username').val(), $('#password').val(), function(result){
-    	    if(result){
-    	      console.log('logged in')
-    	    }else{
-    	      console.log('Failed login')
-    	    }
-          $('#login-form').submit();
-    	  });
-    	});
-    });
+    // $(document).ready(function(){
+    // 	$('#login-btn').on('click',function(){
+    // 	  login($('#username').val(), $('#password').val(), function(result){
+    // 	    if(result){
+    // 	      console.log('logged in')
+    // 	    }else{
+    // 	      console.log('Failed login')
+    // 	    }
+    //       $('#login-form').submit();
+    // 	  });
+    // 	});
+    // });
 </script>
 
   </head>
@@ -47,7 +47,7 @@
                 <i class="fa fa-user"></i>
               </span>
             </div>
-            <div class="red">{{form.username.errors.as_text}}</div>
+            <div class="has-text-danger">{{form.username.errors.as_text}}</div>
           </div>
 
           <div class="field">
@@ -58,10 +58,13 @@
                 <i class="fa fa-key"></i>
               </span>
             </div>
-            <div class="red">{{form.password.errors.as_text}}</div>
+            <div class="has-text-danger">{{form.password.errors.as_text}}</div>
           </div>
+          {% if form.non_field_errors %}
+              <div class="notification is-danger">{{form.non_field_errors}}</div>
+          {% endif %}
           <div class="has-text-centered">
-            <button class="button is-vcentered is-primary is-outlined" type="button" id="login-btn">Login</button>
+            <input class="button is-vcentered is-primary is-outlined" type="submit" value="Login" id="login-btn"/>
           </div>
         </form>
         </section>
