--- a/globalsky/templates/logout.html
+++ b/globalsky/templates/logout.html
@@ -2,8 +2,8 @@
 
 {% load static %}
 
-{% block header_script %}
-<script src="{% static "core/js/auth.js" %}"  type="text/javascript" ></script>
+{% block script-content %}
+<script src="{% static "js/auth.js" %}"  type="text/javascript" ></script>
 <script>
 $(document).ready(function(){
 
