--- a/partners/templates/partners/partner_detail.html
+++ b/partners/templates/partners/partner_detail.html
@@ -5,7 +5,7 @@
 
 {% block mainfull %}
 
-<h3>Proposal: {{object.proposal_code}}</h3>
+<h3>Proposal Code: {{object.proposal_code}}</h3>
 
 <p>{{object.summary}}</p>
 
