--- a/partners/templates/partners/partner_list.html
+++ b/partners/templates/partners/partner_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}Full Partner List{% endblock %}
-{% block title_head %}Full List{% endblock %}
+{% block title %}{{title}}{% endblock %}
+{% block title_head %}{{title}}{% endblock %}
 
 
  {% block main %}
