--- a/partners/templates/partners/proposal_list.html
+++ b/partners/templates/partners/proposal_list.html
@@ -6,7 +6,22 @@
 
  {% block main %}
 
-<table class="table is-fullwidth">
+ <div class="block">
+   {% if activecall %}
+   <div class="buttons is-centered">
+      <a class="button is-large gold-bg" href="{% url 'apply' %}">Apply to become a partner</a>
+    </div>
+    {% else%}
+    <p>We are not currently accepting applications for partners. Please view the <a href="https://lco.global/education/partners/">Global Sky Partners web pages</a> for more details.</p>
+{% endif %}
+</div>
+
+{% if object_list %}
+<h2>
+Your proposals
+</h2>
+
+<table class="table is-fullwidth is-striped">
 <tr>
   <th>Title</th>
   <th>Year</th>
@@ -17,9 +32,14 @@
   <tr>
     <td><a href="{% url 'proposal' object.id %}">{{object.partner.name}}</a></td>
     <td>{{object.cohort.year}}</td>
-    <td>{{object.get_status_display}}</td>
+    <td>
+      <span class="{% if object.status == 0 %}gold-bg{% elif object.status == 1 %}blue-bg white{%endif%} py-2 px-2" >
+      {{object.get_status_display}}
+      </span>
+    </td>
   </tr>
 {% endfor %}
 </table>
+{% endif %}
 
  {% endblock %}
