Fixed submission, better auth

--- a/globalsky/templates/base.html
+++ b/globalsky/templates/base.html
@@ -57,7 +57,7 @@
         <a class="navbar-item" href="{% url 'partners' %}">
           Partners
         </a>
-        <a class="navbar-item" href="">
+        <a class="navbar-item" href="{% url 'report-list'%}">
           Reports
         </a>
         <a class="navbar-item" href="{% url 'proposals' %}">
