--- a/globalsky/templates/home.html
+++ b/globalsky/templates/home.html
@@ -3,32 +3,59 @@
 {% block title_head %}Global Sky Partners{% endblock %}
 {% block title %}Global Sky Partners{% endblock %}
 
- {% block mainfull %}
-<div class="columns">
-    <div class="column is-one-third">
-       <h4>Time Used</h4>
-       <div class="partnerlist">
-       {% for object in partners %}
-        <div class="content">
-           <a href="{% url 'partner' object.proposal_code %}">{{object.name}}</a>
-           <span id="{{object.proposal_code}}" style="width:20%;"></span>
-        </div>
-       {% endfor %}
+ {% block fullcontent %}
+ <section class="hero">
+   <div class="container">
+  <div class="hero-body">
+    <p class="title">
+      Global Sky Partners
+    </p>
+    <p class="subtitle">
+      Welcome to the administration site for Global Sky Partners project organizers. Using this site you can submit proposals to become a Global Sky Partner or extend your program, check your time usage and user requests, and submit reports on activities.
+    </p>
+  </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="columns">
+        <div class="column is-one-third">
+           <h4>Time Used This Semester</h4>
+           <div class="partnerlist">
+           {% for object in partners %}
+            <div class="block">
+               <a href="{% url 'partner' object.proposal_code %}">{{object.name}}</a>
+               <span id="{{object.proposal_code}}" style="width:20%;"></span>
+            </div>
+           {% endfor %}
+           </div>
        </div>
-   </div>
-   <div class="column is-one-third">
-     <div class="block">
-       {% if activecall %}
-       <div class="buttons is-centered">
-          <a class="button is-large gold-bg" href="{% url 'apply' %}">Apply to become a partner</a>
+       <div class="column is-one-third">
+         <div class="content">
+           {% if activecall %}
+           <div class="buttons is-centered">
+              <a class="button gold-bg" href="{% url 'apply' %}">Apply to become a partner</a>
+            </div>
+           {% for call in activecall %}
+           <p>We are currently taking applications for new Global Sky Partners.
+            <p><a href="{{call.call}}" class="">View proposal call</a> for more details.<br/>
+             <strong>Deadline: {{call.deadline|date:"d M Y H:i T"}}</strong>
+           </p>
+            {% endfor %}
+            {% else%}
+            <p>We are not currently accepting applications for partners. Please view the <a href="https://lco.global/education/partners/">Global Sky Partners web pages</a> for more details about becoming a Pilot Partner.</p>
+        {% endif %}
         </div>
-        {% else%}
-        <p>We are not currently accepting applications for partners. Please view the <a href="https://lco.global/education/partners/">Global Sky Partners web pages</a> for more details.</p>
-    {% endif %}
+       </div>
+       <div class="column">
+         <article class="tile is-child notification is-primary">
+           <p class="title">{{active_partners}}</p>
+           <p class="subtitle">Active Partner Projects</p>
+         </article>
+        </div>
+     </div>
     </div>
-   </div>
-
- </div>
+ </section>
  {% endblock %}
 
  {% block script-content %}
