--- a/globalsky/templates/home.html
+++ b/globalsky/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title_head %}Global Sky Partners{% endblock %}
 {% block title %}Global Sky Partners{% endblock %}
@@ -7,12 +8,20 @@
  <section class="hero">
    <div class="container">
   <div class="hero-body">
-    <p class="title">
-      Global Sky Partners
-    </p>
-    <p class="subtitle">
-      Welcome to the administration site for Global Sky Partners project organizers. Using this site you can submit proposals to become a Global Sky Partner or extend your program, check your time usage and user requests, and submit reports on activities.
-    </p>
+    <div class="columns">
+        <div class="column is-two-thirds">
+          <p class="title">
+            Global Sky Partners
+          </p>
+          <p class="is-muted">
+            Welcome to the administration site for Global Sky Partners project organizers. Using this site you can submit proposals to become a Global Sky Partner or extend your program, check your time usage and user requests, and submit reports on activities.
+          </p>
+        </div>
+        <div class="column">
+          <figure class="image">
+          <img src="{% static 'img/gsp-logo.png' %}" />
+          </figure>
+        </div>
   </div>
   </div>
 </section>
