Login info; error code pages

--- a/globalsky/templates/home.html
+++ b/globalsky/templates/home.html
@@ -46,7 +46,7 @@
               <a class="button gold-bg" href="{% url 'apply' %}">Apply to become a partner</a>
             </div>
            {% for call in activecall %}
-           <p>We are currently taking applications for new Global Sky Partners.
+           <p>We are currently taking applications for new Global Sky Partners.</p>
             <p><a href="{{call.call}}" class="">View proposal call</a> for more details.<br/>
              <strong>Deadline: {{call.deadline|date:"d M Y H:i T"}}</strong>
            </p>
