--- a/partners/templates/partners/proposal_form.html
+++ b/partners/templates/partners/proposal_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title_head %}Partner Application{% endblock %}
-{% block title %}Apply to {{activecall.year}}{% endblock %}
+{% block title_head %}Partner Application Form{% endblock %}
+{% block title %}Partner Application{% endblock %}
 
 {% block script-content %}
 <script>
@@ -42,6 +42,10 @@
 
 {% if activecall %}
 
+<div class="content">
+<p class="subtitle">Submit an application for a partner project for {{activecall.year}}.</p>
+</div>
+
 {% if editing %}
 <div class="notification">
   Editing proposal
@@ -68,7 +72,7 @@
 
 
 <div class="content">
-  <div class="title">Select existing or create a new project</div>
+  <div class="title">Is this for an existing or a new project?</div>
 </div>
 
 <div class="field">
