--- a/globalsky/templates/403.html
+++ b/globalsky/templates/403.html
@@ -15,7 +15,12 @@
   <div class="column">
    <h1 class="red">403</h1>
    <p>Uh oh! This page is not available to you.</p>
-   <a href="/" alt="home page" class="btn btn-primary">Return home <i class="far fa-home"></i></a>
+   <a href="{% url 'home' %}" alt="home page" class="button gold-bg">
+     <span class="icon">
+       <i class="far fa-home"></i>
+      </span>
+      <span>Site Home</span>
+    </a>
  </div>
 </div>
 {% endblock %}
