Hide non-pi info

--- a/globalsky/templates/home.html
+++ b/globalsky/templates/home.html
@@ -16,6 +16,7 @@
           <p class="is-muted">
             Welcome to the administration site for Global Sky Partners project organizers. Using this site you can submit proposals to become a Global Sky Partner or extend your program, check your time usage and user requests, and submit reports on activities.
           </p>
+          <p><a href="https://lco.global/education/partners/becoming-global-sky-partner/">About becoming a Global Sky Partner <i class="fas fa-chevron-right"></i></a></p>
         </div>
         <div class="column">
           <figure class="image">
