--- a/partners/templates/partners/proposal_form.html
+++ b/partners/templates/partners/proposal_form.html
@@ -145,10 +145,10 @@
   {% endfor %}
   <div class="field is-grouped">
     <div class="control">
-      <input type="submit" class="button is-link" value="Save" />
+      <input type="submit" class="button is-link" value="Save &amp; Preview" />
     </div>
     <div class="control">
-      <a class="button is-link is-light" href="{% url 'partners' %}">Exit</a>
+      <a class="button is-link is-light" href="{% url 'proposals' %}">Exit</a>
     </div>
   </div>
   </div>
