--- a/partners/templates/partners/proposal_list.html
+++ b/partners/templates/partners/proposal_list.html
@@ -17,6 +17,7 @@
     {% else%}
     <p>We are not currently accepting applications for partners. Please view the <a href="https://lco.global/education/partners/">Global Sky Partners web pages</a> for more details.</p>
 {% endif %}
+          <p><a href="https://lco.global/education/partners/becoming-global-sky-partner/">About becoming a Global Sky Partner <i class="fas fa-chevron-right"></i></a></p>
 </div>
 
 {% if object_list %}
