--- a/globalsky/templates/base.html
+++ b/globalsky/templates/base.html
@@ -16,8 +16,9 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{% block meta_description %}{% endblock %}">
 
-
+    <link rel=apple-touch-icon href=https://cdn.lco.global/mainstyle/img/favicon.png>
     <link rel="shortcut icon" href="https://cdn.lco.global/mainstyle/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" type=image/png href=https://cdn.lco.global/mainstyle/img/favicon-trans.png>
     <link href='https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css' rel="stylesheet">
     <script defer src="https://pro.fontawesome.com/releases/v5.13.0/js/all.js" integrity="sha384-Z0e6PSokCQP510gixgZGPs+obVv8eogS/eS2+/7lLSMOfmLnWBgPQppPispQXGUM" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@700&family=Libre+Franklin:ital,wght@0,400;0,700;1,500&display=swap" rel="stylesheet">
