--- a/partners/templates/partners/proposal_list.html
+++ b/partners/templates/partners/proposal_list.html
@@ -27,7 +27,7 @@ Your proposals
 
 <table class="table is-fullwidth is-striped">
 <tr>
-  <th>Title</th>
+  <th class="has-text-left">Title</th>
   <th>Year</th>
   <th>Status</th>
 </tr>
@@ -35,8 +35,8 @@ Your proposals
 {% for object in object_list %}
   <tr>
     <td><a href="{% url 'proposal' object.id %}">{{object.partner.name}}</a></td>
-    <td>{{object.cohort.year}}</td>
-    <td>
+    <td class="has-text-centered">{{object.cohort.year}}</td>
+    <td class="has-text-centered">
       <span class="{% if object.status == 0 %}gold-bg{% elif object.status == 1 %}blue-bg white{%endif%} py-2 px-2" >
       {{object.get_status_display}}
       </span>
