Adding favicons to login

--- a/globalsky/templates/login.html
+++ b/globalsky/templates/login.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="assets/img/logo_r_resumme.png" type="image/x-icon" />
     <title>Global Sky Partner Management Log In</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <link rel=apple-touch-icon href=https://cdn.lco.global/mainstyle/img/favicon.png>
+    <link rel="shortcut icon" href="https://cdn.lco.global/mainstyle/img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" type=image/png href=https://cdn.lco.global/mainstyle/img/favicon-trans.png>
     <link href='https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css' rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <link rel="stylesheet" href="{% static 'css/gsp-main.css' %}">
