Adding tests;new_old bug fix

--- a/globalsky/templates/home.html
+++ b/globalsky/templates/home.html
@@ -5,7 +5,7 @@
 {% block title %}Global Sky Partners{% endblock %}
 
  {% block fullcontent %}
- <section class="hero">
+ <section class="hero" id="home">
    <div class="container">
   <div class="hero-body">
     <div class="columns">
