--- a/partners/templates/partners/partner_list.html
+++ b/partners/templates/partners/partner_list.html
@@ -42,7 +42,10 @@
   <tr {%if not object.active %}class="has-background-grey-lighter"{%endif%}>
     <td><a href="{% url 'partner' object.proposal_code %}">{{object.name}}</a></td>
     <td {% if request.user not in object.pi.all %} colspan=2{%endif%}>
-      {% for pi in object.pi.all %}{{pi.first_name}} {{pi.last_name}}{% endfor %}
+      {% for pi in object.pi.all %}{% if pi.username != 'egomez' %}
+      {{pi.first_name}} {{pi.last_name}}{%if not forloop.last%},{%endif%}
+      {% endif %}
+      {% endfor %}
     </td>
     {% if request.user in object.pi.all %}
     <td id="{{object.proposal_code}}" style="width:20%;"></td>
