Use proposals link not apply on home

--- a/globalsky/templates/home.html
+++ b/globalsky/templates/home.html
@@ -46,7 +46,7 @@
          <div class="content">
            {% if activecall %}
            <div class="buttons is-centered">
-              <a class="button gold-bg" href="{% url 'apply' %}">Apply to become a partner</a>
+              <a class="button gold-bg" href="{% url 'proposals' %}">Apply to become a partner</a>
             </div>
            {% for call in activecall %}
            <p>We are currently taking applications for new Global Sky Partners.</p>
