Adding impact reporting

--- a/reports/templates/reports/report_create.html
+++ b/reports/templates/reports/report_create.html
@@ -2,8 +2,8 @@
 
 {% load static %}
 
-{% block title_head %}{{object.name}}{% endblock %}
-{% block title %}{{object.name}}{% endblock %}
+{% block title_head %}Final Report{% endblock %}
+{% block title %}Final Report Submission{% endblock %}
 
 {% block mainfull %}
 
