--- a/reports/templates/reports/imprint_create.html
+++ b/reports/templates/reports/imprint_create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load static %}
+{% load static crispy_forms_tags %}
 
 {% block title_head %}Impact Submit{% endblock %}
 {% block title %}Impact Submission{% endblock %}
@@ -8,82 +8,14 @@
 {% block mainfull %}
 
 <section>
-<form action="" method="post">
-  {% csrf_token %}
-<div class="container">
-  <p>Use this form any time you want to log impact relevant to your Global Sky Partner program. You can build your final report from all the impacts you submit during your project's lifetime.</p>
-  <p>Examples of impact are: teacher training session, exhibition, demonstration, public talk, student presentation.</p>
-  <div class="notification impactsform">
-    {# Include the hidden fields in the form #}
-    {% if forloop.first %}
-        {% for hidden in form.hidden_fields %}
-            {{ hidden }}
-        {% endfor %}
-    {% endif %}
-    <div class="columns">
-      <div class="column is-one-third">
-        <div class="field">
-          <label class="label">{{form.size.label|capfirst}}</label>
-          {{ form.size.errors.as_ul }}
-          <div class="control">
-            {{ form.size }}
-          </div>
-        </div>
-        <div class="field">
-          <label class="label">{{form.activity.label|capfirst}}</label>
-          {{ form.activity.errors.as_ul }}
-          <div class="control">
-            <div class="select">
-            {{ form.activity }}
-            </div>
-          </div>
-        </div>
-        <div class="field">
-          <label class="label">{{form.audience.label|capfirst}}</label>
-          {{ form.audience.errors.as_ul }}
-          <div class="control">
-            <div class="select">
-            {{ form.audience }}
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="column is-one-third">
-        <div class="field">
-          <label class="label">{{form.demographic.label|capfirst}}</label>
-          {{ form.demographic.errors.as_ul }}
-          <div class="control">
-            <div class="select">
-            {{ form.demographic }}
-          </div>
-          </div>
-        </div>
-        <div class="field">
-          <label class="label">{{form.demo_other.label|capfirst}}</label>
-          {{ form.demo_other.errors.as_ul }}
-          <div class="control">
-            {{ form.demo_other }}
-          </div>
-        </div>
-      </div>
-      <div class="column  is-one-third">
-        <div class="field">
-          <label class="label">{{form.impact.label|capfirst}}</label>
-          {{ form.impact.errors.as_ul }}
-          <div class="control">
-            {{ form.impact }}
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="container">
+    <p>Use this form any time you want to log impact relevant to your Global Sky Partner program. You can build your final report from all the impacts you submit during your project's lifetime.</p>
+    <p>Examples of impact are: teacher training session, exhibition, demonstration, public talk, student presentation.</p>
+
+    {% crispy form %}
+
   </div>
-</div>
-<div class="field">
-<div class="control">
-  <input type="submit" value="Save" class="button"/>
-</div>
-</div>
-</form>
+
 </section>
 
 {% endblock %}
