--- a/reports/templates/reports/report_list.html
+++ b/reports/templates/reports/report_list.html
@@ -6,5 +6,29 @@
 {% block title %}Reports{% endblock %}
 
 {% block mainfull %}
+<div class="buttons">
+  <a class="button is-primary" href="{% url 'report-impact' %}">Log Impact</a>
+  <a class="button is-link" href="{% url 'report-create' %}">Write Final Report</a>
+</div>
+{% if not impacts %}
 <p>Your submitted reports will appear here.</p>
+{% else %}
+<div class="content">
+<h2>Impact Reports</h2>
+<ul>
+{% for impact in impacts %}
+<li>{{impact}}</li>
+{% endfor %}
+</ul>
+<h2>Final Reports</h2>
+<table class="table is-fullwidth">
+{% for report in object_list %}
+<tr>
+  <td>{{report.partner}}</td>
+  <td>{{report.cohort}}</td>
+  <td>{% url 'report-edit' report.id %}</td>
+{% endfor %}
+</table>
+</div>
+{% endif %}
 {% endblock %}
