Impact and report submission working

--- a/reports/templates/reports/report_create.html
+++ b/reports/templates/reports/report_create.html
@@ -1,140 +1,13 @@
 {% extends 'base.html' %}
 
-{% load static %}
+{% load static crispy_forms_tags  %}
 
 {% block title_head %}Final Report{% endblock %}
 {% block title %}Final Report Submission{% endblock %}
 
 {% block mainfull %}
 
-<form action="" method="post">
-  {% csrf_token %}
-
-  <section>
-    <div class="columns">
-      <div class="column is-one-third">
-        <div class="field">
-          <label class="label">{{ form.partner.label|capfirst }}</label>
-          <div class="control">
-            <div class="select">
-              {{ form.partner }}
-            </div>
-          </div>
-        </div>
-
-        <div class="field">
-          <label class="label">{{ form.countries.label|capfirst }}</label>
-          <div class="control">
-            <div class="select is-multiple">
-              {{ form.countries }}
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="field">
-          <label class="label">{{ form.summary.label|capfirst }}</label>
-          <div class="control">
-              {{ form.summary }}
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="field">
-          <label class="label">{{ form.comment.label|capfirst }}</label>
-          <div class="control">
-              {{ form.comment }}
-          </div>
-        </div>
-      </div>
-  </div>
-</section>
-        {{ impacts.management_form }}
-
-        <section>
-        {% for form in impacts.forms %}
-        <div class="container">
-          <h3>Project Impact</h3>
-          <div class="notification impactsform">
-            {# Include the hidden fields in the form #}
-            {% if forloop.first %}
-                {% for hidden in form.hidden_fields %}
-                    {{ hidden }}
-                {% endfor %}
-            {% endif %}
-            <div class="columns">
-              <div class="column is-one-third">
-                <div class="field">
-                  <label class="label">{{form.size.label|capfirst}}</label>
-                  {{ form.size.errors.as_ul }}
-                  <div class="control">
-                    {{ form.size }}
-                  </div>
-                </div>
-                <div class="field">
-                  <label class="label">{{form.activity.label|capfirst}}</label>
-                  {{ form.activity.errors.as_ul }}
-                  <div class="control">
-                    <div class="select">
-                    {{ form.activity }}
-                    </div>
-                  </div>
-                </div>
-                <div class="field">
-                  <label class="label">{{form.audience.label|capfirst}}</label>
-                  {{ form.audience.errors.as_ul }}
-                  <div class="control">
-                    <div class="select">
-                    {{ form.audience }}
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="column is-one-third">
-                <div class="field">
-                  <label class="label">{{form.demographic.label|capfirst}}</label>
-                  {{ form.demographic.errors.as_ul }}
-                  <div class="control">
-                    <div class="select">
-                    {{ form.demographic }}
-                  </div>
-                  </div>
-                </div>
-                <div class="field">
-                  <label class="label">{{form.demo_other.label|capfirst}}</label>
-                  {{ form.demo_other.errors.as_ul }}
-                  <div class="control">
-                    {{ form.demo_other }}
-                  </div>
-                </div>
-              </div>
-              <div class="column  is-one-third">
-                <div class="field">
-                  <label class="label">{{form.impact.label|capfirst}}</label>
-                  {{ form.impact.errors.as_ul }}
-                  <div class="control">
-                    {{ form.impact }}
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-    </section>
-    <div class="field">
-    <div class="control">
-      <input type="submit" value="Save" class="button"/>
-    </div>
-    </div>
-  </form>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="{% static 'js/jquery.formset.js' %}"></script>
-<script type="text/javascript">
-    $('.impactsform').formset({
-        addText: '<i class="fas fa-plus-circle"></i> add impact',
-        deleteText: '<i class="fas fa-trash-alt"></i>',
-        prefix: 'imprint_set'
-    });
-</script>
+<h2>Part 1</h2>
+{% crispy form %}
+<p>You will add details of the impact your program made in Part 2</p>
 {% endblock %}
